@@ -1,5 +1,11 @@
 Tue Sep  9 18:53:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
+	* config.h (SYSTEM_GETCALLER): Define.
+	* pwd.c (getpwuid, getpwnam): Always return NULL (see comment
+	for rationale).
+	* options.h: Don't define CVS_BADROOT.
+	* pwd.h: Nuke uid_t and related changes.
+
 	* filesubr.c (fnfold): Further expand comment about how to handle
 	filenames like "y.tab.c".
 
